added HTML and CSS files

--- a/HTML_CSS/Table_Practice.html
+++ b/HTML_CSS/Table_Practice.html
@@ -1,3 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Specificity</title>
+    <style>
+        #main {
+            background: green;
+        }
+        .container {
+            background: blue;
+        }
+        div {
+            background: red;
+            height: 200px;
+            width: 200px;
+        }
+        .winner {
+            background: aqua !important;
+        }
+    </style>
+</head>
+<body>
+    <div class="container winner" id="main" style="background:purple;">
+        I AM A DIV!
+    </div>
+    
+</body>
+</html>
+
+
+
 <table>
     <thead>
         <tr>
@@ -26,3 +57,4 @@
         </tr>
     </tfoot>
 </table>
+
