--- a/DOM Practice/DOM_practice1.html
+++ b/DOM Practice/DOM_practice1.html
@@ -25,6 +25,7 @@
         // querySelector/querySelectorAll uses CSS selectors
         var divsWithClassOfHello = document.querySelectorAll(".hello");
         
+// CHANGING TEXT
         // both will change text of an element through either innerHTML property or innerText property
         // difference between the two is that innerHTML retrieves and sets the content in HTML format
         // innerText retrieves and sets content of the tag as plain text
