finished version 1 of pokemon gif match

--- a/card_game/index.html
+++ b/card_game/index.html
@@ -8,25 +8,31 @@
     <title>Matching Card Game</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+    <!-- Why does adding bootstrap break the gif? 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.1/sketchy/bootstrap.css">
+    -->
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto+Mono" rel="stylesheet">
 </head>
 <body>
     <div class="control-panel">
         <h1 class="game-title">Pokemon Gif Match</h1>
         <h2>Click on start button to begin!!!</h2>
-        <h3 id="highText">High Score: <span id="highDisplayed"></span></h3>
-        <button class="start" type="button" id="startbutton">Start Game</button>
-        <div>Current Score: </div>
-        <div id="score"></div>
+        <h3 id="highText">Least Amount of Clicks: <span id="highDisplayed"></span></h3>
+        <button class="start btn btn-primary" type="button" id="startbutton">Start Game</button>
+        <div class="currentScore">Current Score: </div>
+        <div class="currentScore" id="score"></div>
     </div>
     <div class="endMenu">
         <div class="endGame" id="winner">
             <h1 class="header">You Won!</h1>
             <h2 id="yourScore"></h2>
+            <p class="closePopup">x</p>
             <button class="replay" id="replaybutton">Replay</button>
         </div>
     </div>  
 <!-- laying out gameboard with each card having a back and front of the card 16 cards for now-->
+    <a href="#board"></a>
     <div class="gameboard">
         <div class='container'>
             <div class='card'>
